CLDR-7393 ST: Right hand info panel needs to be scrollable (buggy on firefox)
X-SVN-Rev: 10294

--- a/tools/cldr-apps/WebContent/surveytool.css
+++ b/tools/cldr-apps/WebContent/surveytool.css
@@ -3021,8 +3021,7 @@ div.voterList .voterOrg {
 }
 
 #itemInfo {
-	height:100%;
-	padding-bottom:180px;
+	height:calc(100% - 200px);
 	min-width: 320px;
 	position:fixed;
 }
